# variational-entropy-search

./: 1D_train_X.pt  BO-1D.ipynb  BO-2D-update.ipynb  BO-2D.ipynb  BOTorch_experiment.ipynb  README.md  VES-experiment.ipynb  bayesian_optimization_util.py  bo-exp.py  california_housing.ipynb  container.sdef  digits.ipynb  input_constructors.py  iris.ipynb  models.py  plot_gpPrior_2d.ipynb  pyproject.toml  realbench_ves-gamma_ei_mes.ipynb  requirements.txt  results.ipynb  results_ei_equivalence.ipynb  results_gamma_vs_ei.ipynb  results_gamma_vs_ei_largepath.ipynb  results_runtime.ipynb  results_ves-gamma_ei_mes.ipynb  rff.py  util.py  variational_entropy_search.py  variational_entropy_search_updated.py  vbo-test.ipynb  ves.py  ves_update.py  wine.ipynb
entropy-search-master/matlab/: EntropySearch.m  ExampleSetup.m  joint_min.mexmaci64
notebooks/: BO-1D.ipynb  BO-2D.ipynb  california_housing.ipynb  digits.ipynb  exploration.ipynb  exploration_noisy.ipynb  iris.ipynb  plot_gpPrior_2d.ipynb  realbench_ves-gamma_ei_mes.ipynb  results.ipynb  results_ei_equivalence.ipynb  results_gamma_vs_ei.ipynb  results_gamma_vs_ei_largepath.ipynb  results_rerun_nov_14.ipynb  results_rerun_nov_22_noisy.ipynb  results_runtime.ipynb  results_ves-gamma_ei_mes.ipynb  vbo-test.ipynb  wine.ipynb
ves/: half_ves.py  main.py  util.py  ves_exponential.py  ves_gamma.py  ves_gamma_seq_k.py  ves_gamma_varpro.py  ves_legacy.py
