[tool.poetry]
name = "ves"
version = "0.1.0"
description = ""
authors = ["Nuojing Chen <nuch1756@colorado.edu>, Leonard Papenmeier <leonard.papenmeier@cs.lth.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
botorch = "^0.11.3"
bencherscaffold = "^0.1.2"
cython = "^3.0.11"
notebook = "^7.3.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
numpy = "~1.26.0"
scipy = "^1.15.1"

[tool.poetry.group.dev.dependencies]
memray = "^1.15.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
